fixed img reponsiveness on mobile devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -161,6 +161,8 @@ iframe {
 }
 
 img {
+    max-width: 100%;
+    height: auto;
     border-radius: 7px; /* Adjust as needed */
 }
 
